packages/css/src/components/datatable.scss
.data-table {
  @apply text-text-primary;

  .row {
    @apply flex border-b border-border pb-sm mb-sm;

    span {
      width: 70%;
      display: contents;
    }

    h2 {
      width: 30%;
      @apply font-bold text-heading-s;
    }

    .value {
      width: 70%;
      @apply text-heading-s;
    }
    .caption {
      width: 70%;
      @apply text-heading-s text-text-secondary;
    }
  }

  .last {
    border: none;
    padding: 0;
    margin: 0;
  }
}

.employee-data-table {
  .row {
    @apply flex pb-sm mb-sm;

    span {
      width: 70%;
      display: contents;
    }

    h2 {
      width: 30%;
      @apply font-bold text-heading-s;
    }

    .value {
      width: 70%;
      @apply text-heading-s;
    }

    .caption {
      width: 70%;
      @apply text-heading-s text-text-secondary;
    }
  }

  .last {
    border: none;
    padding: 0;
    margin: 0;
  }
}

